Update language Locale and reading from settings